@@ -1,3 +1,9 @@
+2013-04-25  Hui Zhu  <hui@codesourcery.com>
+
+	PR gdb/15293
+
+	* gdb.base/dprintf.exp: Add ignore command.
+
 2013-04-24  Hui Zhu  <hui@codesourcery.com>
 
 	PR gdb/15165
